--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Position</title>
-    <link rel="stylesheet" href="css/main.css"
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="wrapper">
-      <nav class="class"></nav>
+      <nav class="nav"></nav>
       <main class="main">
         <img class="new" src="images/new.png" alt="" />
         <p>
